Fix T89271: Selecting all vertices doesn't select all edges.

Mistake in recent commit {rBea4309925f1d2d2a224bd1dce12269a58ade9b62}.